tests/rosetta/out/Smalltalk/ackermann-function.out
/workspace/mochi/tests/rosetta/out/Smalltalk/ackermann-function.st:11: parse error, expected '|' or identifier
